# PewPaw

./: .gitignore  Makefile  README.md  pewpaw
backend/: go.mod  go.sum  main.go
backend/database/: init.go  models.go
backend/socket/: ipc.go
backend/whatsapp/: client.go
frontend/: CMakeLists.txt  main.cpp
frontend/bridge/: ipc_bridge.cpp  ipc_bridge.h  notification_bridge.cpp  notification_bridge.h
frontend/resources/: index.html  resources.qrc
frontend/resources/css/: style.css
frontend/resources/js/: app.js
packaging/: pewpawd.service
